--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,16 @@
-html {
-  min-height: 100%;
-}
+
 body {
   min-height: fit-content;
 }
 
 body {
-  height: 100%;
   font-family: 'Courier New', Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background-color: #FBDA61;
   background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
-   
+  min-height: 100vh; 
 }
 
 button {
